<resources>
    <string name="app_name">RememberU</string>

    <string name="remember" translatable="false">Remember</string>
    <string name="u" translatable="false">U</string>

    <string name="confirm">Confirm</string>

    <string name="not_auth">Can\'t certification</string>

    <!-- login -->
    <string name="login">Sign in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="google_login">Sign with Google</string>
    <string name="email_login">Sign with E-mail</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="email_verification">Send verification E-mail</string>

    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="verification_email">Verification E-mail</string>

    <string name="send_password_change_mail">Send password change E-mail</string>

    <string name="sent_password_reset_mail">Sent mail for change password.\nPlease reset password to mail</string>
    <string name="question_create_account">Create new account?</string>
    <string name="sent_verification_mail">Sent verification mail.\nPlease click to link and complete verification.</string>

    <!-- Main -->
    <string name="friends">Friends</string>
    <string name="memories">Memo</string>
    <string name="marks">Bookmarks</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="sort_name">Ascending name</string>
    <string name="sort_name_desc">Descending name</string>
    <string name="filter_gender_m">Only male</string>
    <string name="filter_gender_f">Only female</string>
    <string name="filter_gender_u">Only unknown gender</string>
    <string name="filter_memo_exist">Only exist memo</string>

    <string name="sort_birth">Order of age</string>
    <string name="sort_latest">Latest</string>
    <string name="results">Results</string>
    <string name="name">Name</string>
    <string name="others">Other</string>

    <string name="empty_phone_number">Not have phone number</string>
    <string name="empty_description">Not have description</string>

    <!-- Add person -->
    <string name="new_person">Add person</string>
    <string name="modify_person">Modify person</string>
    <string name="person_name">Name(require)</string>
    <string name="person_gender">Gender(require)</string>
    <string name="person_phone">Phone number</string>
    <string name="person_year_old">Birthday</string>
    <string name="person_birth">Birthday</string>
    <string name="person_email">E-mail</string>
    <string name="person_description">Short description</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Detail -->
    <string name="sort_date_desc">Latest</string>
    <string name="sort_date_asc">Oldest</string>
    <string name="sort_title_asc">Ascending title</string>
    <string name="sort_title_desc">Descending title</string>

    <!-- Write -->
    <string name="title">Title</string>
    <string name="content">Content</string>

    <!-- setting -->
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>


    <string name="read_contacts">Read contacts</string>
    <string name="read_contacts_sub">Read and save contacts this app\\n(only name, phone number)</string>

    <string name="upload_server">Upload</string>
    <string name="upload_server_sub">Upload people and memo data in this app to server</string>

    <string name="download_server">Download</string>
    <string name="download_server_sub">Overwrite people and memo data from server</string>

    <!-- Dialog -->
    <string name="title_app_terminate">Terminate application</string>
    <string name="subtitle_app_terminate">Exit from this app?</string>

    <string name="title_delete_person">Delete person</string>
    <string name="subtitle_delete_person">You want delete this person and memo data?</string>

    <string name="title_delete_memo">Delete memo</string>
    <string name="subtitle_delete_memo">You want delete this memo?</string>

    <string name="title_exit_memo">Terminate</string>

    <string name="notify_title_complete_read_contacts">Complete</string>
    <string name="join">Join</string>
    <string name="notify">Notify</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notify_subtitle_complete_read_contacts">Contact data has been applied to this app</string>
    <string name="subtitle_exit_memo">You want exit memo editor?</string>

    <string name="notify_title_upload_success">Success upload</string>
    <string name="notify_subtitle_upload_success">Success uploaded all data!\nYou can use it when new device without re-entering data</string>

    <string name="notify_title_upload_fail">Fail upload</string>
    <string name="notify_subtitle_upload_fail">Failed upload. Please try again</string>

    <string name="notify_title_download_success">Success download</string>
    <string name="notify_subtitle_download_success">Success downloaded!\nTry it right now</string>

    <string name="notify_title_download_fail">Fail download</string>
    <string name="notify_subtitle_download_fail">Fail download. Please try again</string>

    <string name="title_upload_data">Upload data</string>
    <string name="subtitle_upload_data">Overwrite data to server?</string>

    <string name="title_download_data">Download data</string>
    <string name="subtitle_download_data">Overwrite server data this device?</string>

    <string name="notify_title_can_not_download">Download reject</string>
    <string name="notify_subtitle_can_not_download">May be latest data or failed load sync data</string>

</resources>