<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ChangePasswordActivity"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_bar_change_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"

        android:paddingHorizontal="25dp"

        >

        <ImageButton
            android:id="@+id/img_btn_back_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/round_arrow_back_ios"
            android:background="?attr/selectableItemBackground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_btn_back_change_password"
            android:layout_margin="10dp"
            android:text="@string/change_password"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_email"

            android:gravity="start"
            android:layout_marginHorizontal="20dp"
            />

        <EditText
            android:id="@+id/et_email_change"
            android:layout_width="match_parent"
            style="@style/MyEditText"
            android:background="@drawable/item_field_primary_outline"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/email"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />

        <android.widget.Button
            android:id="@+id/btn_send_verification_for_change_password"
            android:layout_width="match_parent"
            style="@style/MyButton"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_default_active"
            android:textColor="@color/primary"
            android:text="@string/send_password_change_mail"
            android:elevation="3dp"
            />


    </LinearLayout>






</LinearLayout>