<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/text_all_search_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/all"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"

            android:drawableEnd="@drawable/ic_baseline_filter_alt_24"
            android:drawablePadding="5dp"
            android:layout_marginStart="20dp"

            android:gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_name"

            android:drawableEnd="@drawable/ic_baseline_sort_24"
            android:drawablePadding="5dp"
            android:layout_marginStart="20dp"

            android:gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <EditText
            android:id="@+id/et_search_main"
            android:layout_width="0dp"
            android:layout_height="40dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_btn_add_main"
            app:layout_constraintStart_toStartOf="parent"

            android:background="@drawable/item_field_default"
            android:textSize="12sp"
            android:hint="@string/name"

            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:textCursorDrawable="@drawable/item_field_cursor_default"

            android:padding="10dp"
            android:layout_marginEnd="10dp"
            />

        <ImageButton
            android:id="@+id/img_btn_add_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add"
            android:background="@drawable/item_primary_circle_bg"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>