<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.NewPersonActivity"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_bar_new_person"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20dp"
        >

        <ImageButton
            android:id="@+id/img_btn_back_new_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/round_arrow_back_ios"
            android:background="?attr/selectableItemBackground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_btn_back_new_person"
            android:layout_margin="10dp"
            android:text="@string/new_person"
            />


        <ImageButton
            android:id="@+id/img_btn_bookmark_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bookmark"
            android:foreground="?attr/selectableItemBackground"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_bar_new_person"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="20dp"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_save_person"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_name"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_name_new_person"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/item_field_primary_outline"
                    android:textCursorDrawable="@drawable/field_cursor_primary"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/tv_new_person_name_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_gender"
                    android:layout_marginTop="20dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <android.widget.Button
                        android:id="@+id/btn_male_new"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_theme_select_button"
                        android:layout_marginEnd="5dp"
                        android:text="@string/male"
                        android:textColor="@color/primary"
                        />

                    <android.widget.Button
                        android:id="@+id/btn_female_new"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_theme_select_button"
                        android:layout_marginStart="5dp"
                        android:text="@string/female"
                        android:textColor="@color/primary"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_birth"
                    android:layout_marginTop="20dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <EditText
                        android:id="@+id/et_birth_year_new_person"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:background="@drawable/item_field_primary_outline"
                        android:textCursorDrawable="@drawable/field_cursor_primary"
                        android:padding="10dp"
                        android:maxLines="1"

                        android:layout_weight="2"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"

                        android:maxLength="4"
                        android:gravity="center"
                        android:hint="YYYY"

                        />


                    <EditText
                        android:id="@+id/et_birth_month_new_person"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:background="@drawable/item_field_primary_outline"
                        android:textCursorDrawable="@drawable/field_cursor_primary"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:maxLength="2"

                        android:layout_weight="1"

                        android:layout_marginHorizontal="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"

                        android:gravity="center"
                        android:hint="MM"

                        />


                    <EditText
                        android:id="@+id/et_birth_day_new_person"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:background="@drawable/item_field_primary_outline"
                        android:textCursorDrawable="@drawable/field_cursor_primary"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:maxLength="2"

                        android:layout_weight="1"

                        android:layout_marginEnd="10dp"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"

                        android:gravity="center"
                        android:hint="DD"

                        />

                    <android.widget.Button
                        android:id="@+id/btn_open_birthday_picker_new_person"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:background="@drawable/selector_theme_button"

                        android:layout_gravity="center_vertical"
                        />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_phone"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_phone_new_person"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/item_field_primary_outline"
                    android:textCursorDrawable="@drawable/field_cursor_primary"
                    android:padding="10dp"

                    android:inputType="phone"
                    android:maxLines="1"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_description"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_description_new_person"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/item_field_primary_outline"
                    android:textCursorDrawable="@drawable/field_cursor_primary"
                    android:padding="10dp"
                    android:maxLines="1"

                    />



            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <android.widget.Button
            android:id="@+id/btn_save_person"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/selector_theme_button"
            android:textColor="@color/primary"
            android:text="@string/confirm"

            android:layout_marginVertical="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>